--- a/html/specialColumn.html
+++ b/html/specialColumn.html
@@ -39,56 +39,74 @@
         <ul class="content-list">
             <li>
                 <ul>
-                    <li><span class="fRed">[置顶]</span>NotificationManagerService原理分析</li>
-                    <li>基于Android 7.0源码分析通知机制，相关源码如下：
-                        frameworks/base/services/core/java/com/android/server/notification/ -
-                        NotificationManagerService.java - ManagedServices.java frameworks/base/core/java/andr...
-                    </li>
-                    <li>Posted by Yim Chin on March 3, 2018</li>
+                    <a href="../html/detail.html">
+                        <li class="item-title"><span class="fRed">[置顶]</span>NotificationManagerService原理分析</li>
+                        <li class="item-brief">基于Android 7.0源码分析通知机制，相关源码如下：
+                            frameworks/base/services/core/java/com/android/server/notification/ -
+                            NotificationManagerService.java - ManagedServices.java frameworks/base/core/java/andr...
+                        </li>
+                    </a>
+                    <li class="item-meta">Posted by Yim Chin on March 3, 2018</li>
                 </ul>
             </li>
             <li>
                 <ul>
-                    <li>/proc/stat解析</li>
-                    <li>本文解析进程节点含义 一. 概述 1.1 CPU时间 cpu指标 含义 user 用户态时间 nice 用户态时间(低优先级，nice>0) system 内核态时间 ...</li>
-                    <li>Posted by Yim Chin on March 3, 2018</li>
+                    <a href="..//html/detail.html">
+                        <li class="item-title">/proc/stat解析</li>
+                        <li class="item-brief">本文解析进程节点含义 一. 概述 1.1 CPU时间 cpu指标 含义 user 用户态时间 nice 用户态时间(低优先级，nice>0)
+                            system 内核态时间 ...
+                        </li>
+                    </a>
+                    <li class="item-meta">Posted by Yim Chin on March 3, 2018</li>
                 </ul>
             </li>
             <li>
                 <ul>
-                    <li>Linux进程pid分配法</li>
-                    <li>一. 概述 Android系统创建进程，最终的实现还是调用linux fork方法，对于linux系统每个进程都有唯一的 进程ID(值大于0)，也有pid上限，默认为32768。
-                        pid可重复利用，当进程被杀后会回收该pid，以供后续的进程pid分配。 上一篇文章Linux进程管理
-                        详细地介绍了进程fork过程，在copy_process()过程，执行完父进行文件、内存等信息的拷贝，紧接...
-                    </li>
-                    <li>Posted by Yim Chin on March 3, 2018</li>
+                    <a href="../html/detail.html">
+                        <li class="item-title">Linux进程pid分配法</li>
+                        <li class="item-brief">一. 概述 Android系统创建进程，最终的实现还是调用linux fork方法，对于linux系统每个进程都有唯一的
+                            进程ID(值大于0)，也有pid上限，默认为32768。
+                            pid可重复利用，当进程被杀后会回收该pid，以供后续的进程pid分配。 上一篇文章Linux进程管理
+                            详细地介绍了进程fork过程，在copy_process()过程，执行完父进行文件、内存等信息的拷贝，紧接...
+                        </li>
+                    </a>
+                    <li class="item-meta">Posted by Yim Chin on March 3, 2018</li>
                 </ul>
             </li>
             <li>
                 <ul>
-                    <li>NotificationManagerService原理分析</li>
-                    <li>基于Android 7.0源码分析通知机制，相关源码如下：
-                        frameworks/base/services/core/java/com/android/server/notification/ -
-                        NotificationManagerService.java - ManagedServices.java frameworks/base/core/java/andr...
-                    </li>
-                    <li>Posted by Yim Chin on March 3, 2018</li>
+                    <a href="../html/detail.html">
+                        <li class="item-title">NotificationManagerService原理分析</li>
+                        <li class="item-brief">基于Android 7.0源码分析通知机制，相关源码如下：
+                            frameworks/base/services/core/java/com/android/server/notification/ -
+                            NotificationManagerService.java - ManagedServices.java frameworks/base/core/java/andr...
+                        </li>
+                    </a>
+                    <li class="item-meta">Posted by Yim Chin on March 3, 2018</li>
                 </ul>
             </li>
             <li>
                 <ul>
-                    <li>/proc/stat解析</li>
-                    <li>本文解析进程节点含义 一. 概述 1.1 CPU时间 cpu指标 含义 user 用户态时间 nice 用户态时间(低优先级，nice>0) system 内核态时间 ...</li>
-                    <li>Posted by Yim Chin on March 3, 2018</li>
+                    <a href="../html/detail.html">
+                        <li class="item-title">/proc/stat解析</li>
+                        <li class="item-brief">本文解析进程节点含义 一. 概述 1.1 CPU时间 cpu指标 含义 user 用户态时间 nice 用户态时间(低优先级，nice>0)
+                            system 内核态时间 ...
+                        </li>
+                    </a>
+                    <li class="item-meta">Posted by Yim Chin on March 3, 2018</li>
                 </ul>
             </li>
             <li>
                 <ul>
-                    <li>Linux进程pid分配法</li>
-                    <li>一. 概述 Android系统创建进程，最终的实现还是调用linux fork方法，对于linux系统每个进程都有唯一的 进程ID(值大于0)，也有pid上限，默认为32768。
-                        pid可重复利用，当进程被杀后会回收该pid，以供后续的进程pid分配。 上一篇文章Linux进程管理
-                        详细地介绍了进程fork过程，在copy_process()过程，执行完父进行文件、内存等信息的拷贝，紧接...
-                    </li>
-                    <li>Posted by Yim Chin on March 3, 2018</li>
+                    <a href="../html/detail.html">
+                        <li class="item-title">Linux进程pid分配法</li>
+                        <li class="item-brief">一. 概述 Android系统创建进程，最终的实现还是调用linux fork方法，对于linux系统每个进程都有唯一的
+                            进程ID(值大于0)，也有pid上限，默认为32768。
+                            pid可重复利用，当进程被杀后会回收该pid，以供后续的进程pid分配。 上一篇文章Linux进程管理
+                            详细地介绍了进程fork过程，在copy_process()过程，执行完父进行文件、内存等信息的拷贝，紧接...
+                        </li>
+                    </a>
+                    <li class="item-meta">Posted by Yim Chin on March 3, 2018</li>
                 </ul>
             </li>
         </ul>
@@ -144,7 +162,9 @@
             <div class="win-body clearfix">
                 <ul>
                     <li class="clearfix">
-                        <a href="/Myblog/html/specialColumn.html"> <div class="win-img-left"></div></a>
+                        <a href="/Myblog/html/specialColumn.html">
+                            <div class="win-img-left"></div>
+                        </a>
                         <ul class="win-ul-left">
                             <li><a href="/Myblog/html/specialColumn.html" class="fYellow1">Mybatis入门及源码学习</a></li>
                             <li>文章：55篇</li>
@@ -152,7 +172,9 @@
                         </ul>
                     </li>
                     <li class="marginTop20 clearfix">
-                        <a href="/Myblog/html/specialColumn.html"> <div class="win-img-left"></div></a>
+                        <a href="/Myblog/html/specialColumn.html">
+                            <div class="win-img-left"></div>
+                        </a>
                         <ul class="win-ul-left">
                             <li><a href="/Myblog/html/specialColumn.html" class="fYellow1">Mybatis入门及源码学习</a></li>
                             <li>文章：55篇</li>
@@ -160,7 +182,9 @@
                         </ul>
                     </li>
                     <li class="marginTop20 clearfix">
-                        <a href="/Myblog/html/specialColumn.html"> <div class="win-img-left"></div></a>
+                        <a href="/Myblog/html/specialColumn.html">
+                            <div class="win-img-left"></div>
+                        </a>
                         <ul class="win-ul-left">
                             <li><a href="/Myblog/html/specialColumn.html" class="fYellow1">Mybatis入门及源码学习</a></li>
                             <li>文章：55篇</li>
@@ -168,7 +192,9 @@
                         </ul>
                     </li>
                     <li class="marginTop20 clearfix">
-                        <a href="/Myblog/html/specialColumn.html"><div class="win-img-left"></div></a>
+                        <a href="/Myblog/html/specialColumn.html">
+                            <div class="win-img-left"></div>
+                        </a>
                         <ul class="win-ul-left">
                             <li><a href="/Myblog/html/specialColumn.html" class="fYellow1">Mybatis入门及源码学习</a></li>
                             <li>文章：55篇</li>
@@ -177,9 +203,11 @@
                     </li>
 
                     <li class="marginTop20 clearfix">
-                        <a href="/Myblog/html/specialColumn.html"> <div class="win-img-left"></div></a>
+                        <a href="/Myblog/html/specialColumn.html">
+                            <div class="win-img-left"></div>
+                        </a>
                         <ul class="win-ul-left">
-                            <li> <a href="/Myblog/html/specialColumn.html" class="fYellow1">Mybatis入门及源码学习</a></li>
+                            <li><a href="/Myblog/html/specialColumn.html" class="fYellow1">Mybatis入门及源码学习</a></li>
                             <li>文章：55篇</li>
                             <li>阅读：166458</li>
                         </ul>
