--- a/html/detail.html
+++ b/html/detail.html
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body class="bgGray" data-spy="scroll" data-target="#myScrollspy">
+<body class="bgGray">
 <!--导航条-->
 <div class="nav-bar">
     <div class="container fontWhite">
@@ -49,9 +49,9 @@
     </div>
 </div>
 <!--正文-->
-<div class="container marginTop20">
-    <div id="myScrollspy" class="left" data-spy="affix">
-        <div class="win" data-spy="affix" data-offset-top="414">
+<div class="container marginTop20" data-spy="scroll" data-target="#myScrollspy">
+    <div id="myScrollspy" class="left">
+        <div class="win" data-spy="affix" data-offset-top="434">
             <div class="win-title">目录</div>
             <div class="win-body clearfix">
                 <nav class="nav">
