--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/core/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <link type="text/css" rel="stylesheet" href="css/core/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="css/core/common.css">
     <link type="text/css" rel="stylesheet" href="css/index.css">
@@ -11,24 +12,16 @@
           rel='stylesheet' type='text/css'/>
 </head>
 <body class="bgGray">
-<!--导航条-->
-<div class="nav-bar">
-    <div class="container fontWhite">
-        <span class="nar-bar-title">Yim</span>
-        <ul id="menu" class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Talk</a></li>
-        </ul>
-    </div>
-</div>
+<div id="include"></div>
+
 <!--标题头-->
 <div class="top">
     <div class="container text-center fontWhite">
         <div class="top-title">
-            <span class="f34">Yim</span>
+            <span class="f34 channelSlanted">Yim</span>
             <br>
-            <span class="f18">choose what you want</span>
+            <br>
+            <span class="f18">Choose what you want</span>
         </div>
     </div>
 </div>
